--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -306,28 +306,28 @@
     <string name="canal_street_station">Canal Street Station</string>
     <string name="canal_street_trains" translatable="false">Trains: N, Q, R, W, J, Z, M, 4, 6</string>
     <string name="canal_street_description">There are multiple way to get to the Canal Street subway station. It is a very large station that consists of many trains.</string>
-    <string name="canal_url">https://www.google.com/maps/search/canal+street+train+station+maps/@40.6926789,-73.9890684,14z/data=!3m1!4b1</string>
+    <string name="canal_url" translatable="false">https://www.google.com/maps/search/canal+street+train+station+maps/@40.6926789,-73.9890684,14z/data=!3m1!4b1</string>
 
     <string name="east_broadway_trains" translatable="false">Train: F</string>
     <string name="east_broadway_description">The only train that runs to East Broadway is the F train.</string>
-    <string name="eastBWay_url">https://www.google.com/maps/search/east+broadway+train+station+maps/@40.7122848,-74.0093877,14z/data=!3m1!4b1</string>
+    <string name="eastBWay_url" translatable="false">https://www.google.com/maps/search/east+broadway+train+station+maps/@40.7122848,-74.0093877,14z/data=!3m1!4b1</string>
 
     <string name="grand_street_station">Grand Street Station</string>
     <string name="grand_street_trains" translatable="false">Trains: B, D</string>
     <string name="grand_street_description">During the week ends the B trains do not run. Only the D trains stop at this station.</string>
-    <string name="grand_url">https://www.google.com/maps/search/grand+street+train+station+maps/@40.7185249,-74.0065253,14z</string>
+    <string name="grand_url" translatable="false">https://www.google.com/maps/search/grand+street+train+station+maps/@40.7185249,-74.0065253,14z</string>
 
     <string name="m14a_bus">M14A Bus Route</string>
     <string name="m14a_bus_description">If you are in West Village, Flatiron District, Gramercy Park or East Village you can take the M14A bus that will take you into the Lower East Side into Chinatown.</string>
-    <string name="m14a_url">https://moveonmap.com/nyc/lnM14A/</string>
+    <string name="m14a_url" translatable="false">https://moveonmap.com/nyc/lnM14A/</string>
 
     <string name="m21_bus">M21 Bus Route</string>
     <string name="m21_bus_description">Depending on where you are from Hudson Square to the Lower East Side, you can take the M21 bus to get across Manhattan.</string>
-    <string name="m21_url">https://moveonmap.com/nyc/lnM21/</string>
+    <string name="m21_url" translatable="false">https://moveonmap.com/nyc/lnM21/</string>
 
     <string name="m15_bus">M15 Bus Route</string>
     <string name="m15_bus_description">You can take the M15 bus almost from anywhere in Manhattan. If you are in the west side of Manhattan you will have to walk east. This bus goes from Harlem to lower Manhattan. </string>
-    <string name="m15_url">https://moveonmap.com/nyc/lnM15/</string>
+    <string name="m15_url" translatable="false">https://moveonmap.com/nyc/lnM15/</string>
 
     <string-array name="bus_urls">
         <item>@string/m21_url</item>
